syntax = "proto3";
option go_package = "./;proto";

//下载服务
//请求接受一个DownloadReq（username+password)
//响应回发多条数据（"true" or "false")
service Download{
  rpc Download(DownloadReq)returns(stream DownloadRes){}
}

message  BaseMessage {
  string MessageId = 1;
  int32 From = 2;
  int32 To = 3;

  string MessageName = 4;

  string Timestamp = 5;
}

message DownloadReq {
  BaseMessage base = 1;
  int64 offset = 2;
  int64 size = 3;
}

message DownloadRes {
  BaseMessage base = 1;
  int64 offset = 2;
  int64 size = 3;
  bytes data = 4;
}
